<resources>
    <string name="app_name">Taqs360</string>
    <string name="settings_title">Settings</string>
    <string name="alerts_title">Alerts</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="wind_speed_unit">Wind Speed Unit</string>
    <string name="language">Language</string>
    <string name="location_mode">Location Mode</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="feels_like">Feels like %1$s (%2$s), %3$s</string>
    <string name="humidity">Humidity: %d%%</string>
    <string name="three_hours_forecast_today">Three-Hours Forecast (Today)</string>
    <string name="location_permission_denied">Location permission is required to show weather</string>
    <string name="km">km</string>
    <string name="mph">mph</string>
    <string name="mps">m/s</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="celsius_symbol">°C</string>
    <string name="fahrenheit_symbol">°F</string>
    <string name="kelvin_symbol">K</string>
    <string name="meters_sec">Meters/sec</string>
    <string name="miles_hour">Miles/hour</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="five_days_forecast">Five-Days Forecast</string>
    <string name="three_hours_forecast">Three-Hours Forecast (%s)</string>
    <string name="weather_at_a_glance">Weather at a glance</string>
    <string name="humidity_label">Humidity</string>
    <string name="wind_label">Wind</string>
    <string name="visibility_label">Visibility</string>
    <string name="open_map">Open Map</string>
    <string name="search_places">Search Places</string>
    <string name="no_results_found">No results found</string>
    <string name="current_location">Current Location</string>
    <string name="app_logo_desc">App logo</string>
    <string name="nav_header_title">Weather App</string>
    <string name="nav_header_subtitle">Your local forecast</string>
    <string name="today">Today</string> <!-- Added -->
    <string name="tomorrow">Tomorrow</string>
    <string name="no_alarms">No weather alarms set</string>
    <string name="confirm">Confirm</string>
    <string name="alarm_time">Alarm at %s</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="time_selected">Time: %s</string>
    <string name="date_selected">Date: %s</string>
    <string name="cancel">Cancel</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="btn_select_time">Select Time</string>
    <string name="btn_select_date">Select Date</string>
    <string name="time_picker_description">Time picker dialog</string>
    <string name="date_picker_description">Date picker dialog</string>
    <string name="time_icon_description">Clock icon</string>
    <string name="date_icon_description">Calendar icon</string>
    <string name="time_format">hh:mm a</string>
    <string name="date_format">MMM dd, yyyy</string>
    <string name="selected_time">Selected Time: %s</string>
    <string name="temperature_unit_hint">Select temperature unit</string>
    <string name="wind_speed_unit_hint">Select wind speed unit</string>
    <string name="language_hint" >Select language</string>
    <string name="add_favorite_location">Add favorite location</string>
    <!-- New strings for Favorites -->
    <string name="favorites_title">Favorites</string>
    <string name="no_favorites">No favorite locations set</string>
    <string name="favorite_removed">Favorite removed</string>
    <string name="undo">Undo</string>
    <string name="no_cached_weather" translatable="false">No cached weather data</string>
    <string name="no_location_data" translatable="false">No location data available</string>
    <string name="system_default">System Default</string>


</resources>